<resources>
    <string name="app_name" translatable="false">Deadliner</string>
    <string name="add_event">新建任务</string>
    <string name="add_ddl_name">添加待办的Deadline</string>
    <string name="add_title">添加Deadline</string>
    <string name="save">保存</string>
    <string name="save_and_add_to_calendar">保存到日历</string>
    <string name="alert_delete_title">删除Deadline</string>
    <string name="alert_delete_message">你确定要删除这个Deadline吗？</string>
    <string name="accept">确定</string>
    <string name="cancel">取消</string>
    <string name="toast_deletion">已删除Deadline❌</string>
    <string name="toast_finished">恭喜完成Deadline！🎉</string>
    <string name="alert_edit_title">操作Deadline</string>
    <string name="alert_edit_modify">编辑</string>
    <string name="alert_edit_delete">删除</string>
    <string name="alert_edit_finished">完成</string>
    <string name="alert_edit_definish">撤销完成</string>
    <string name="alert_edit_archive">归档</string>
    <string name="toast_definished">撤销完成Deadline...😭</string>
    <string name="toast_archived">%1$d 项Deadline已归档！🗃️</string>
    <string name="toast_stared">已修改星标状态</string>
    <string name="settings_archive">归档</string>
    <string name="settings_title">设置</string>
    <string name="settings_behavior">交互与行为</string>
    <string name="settings_interface_display">界面外观</string>
    <string name="settings_widget">小组件</string>
    <string name="settings_notification">通知</string>
    <string name="settings_deadliner_ai" translatable="false">Deadliner AI</string>
    <string name="settings_backup">备份</string>
    <string name="settings_lab">实验室</string>
    <string name="settings_wiki" translatable="false">Wiki</string>
    <string name="settings_feedback">帮助与反馈</string>
    <string name="settings_webdav" translatable="false">WebDAV</string>
    <string name="settings_about">关于</string>
    <string name="settings_support_behavior">操作反馈方式 · 应用后台行为</string>
    <string name="settings_support_interface_display">主界面布局 · 显示风格</string>
    <string name="settings_support_notification">DDL临近通知 · 每日定时通知</string>
    <string name="settings_support_backup">导入与导出用户数据库</string>
    <string name="settings_support_deadliner_ai">Deadliner AI · API接入 · 自定义prompt</string>
    <string name="settings_support_webdav">WebDAV 云同步服务</string>
    <string name="settings_support_lab">调试选项与实验性内容</string>
    <string name="settings_support_widget">小组件配置 · 小组件界面与交互设置</string>
    <string name="settings_support_wiki">访问 Github Wiki 快速入门</string>
    <string name="settings_support_feedback">向开发者反馈建议或提交bug</string>
    <string name="settings_support_about"> · 检查更新 · 请开发者喝杯奶茶🧋</string>
    <string name="settings_vibration_title">振动反馈</string>
    <string name="settings_support_vibration">启用交互振动反馈 · 自定义振动强度</string>
    <string name="settings_vibration">启用振动反馈</string>
    <string name="settings_vibration_system">系统默认</string>
    <string name="settings_vibration_custom">自定义振动强度</string>
    <string name="settings_vibration_amplitude">振动强度</string>
    <string name="settings_progress_dir_main">主界面正向进度条</string>
    <string name="settings_fireworks">完成时显示动画效果</string>
    <string name="settings_detail_display">剩余时间详细显示</string>
    <string name="settings_support_progress_dir">主界面任务进度条显示项目进行进度</string>
    <string name="settings_support_excitement">在主界面标题栏下方显示个性化鼓励语句</string>
    <string name="settings_support_fireworks">完成任务时在主界面显示礼花效果</string>
    <string name="settings_support_detail_display">开启后，任务卡片将显示完整时间（精确到分钟）</string>
    <string name="settings_hide_divider">去线留白设计</string>
    <string name="settings_support_hide_divider">开启后，界面中的分割线将会被隐藏</string>
    <string name="settings_auto_archive_title">自动归档</string>
    <string name="settings_support_auto_archive">一段时间后将已完成任务自动放入归档文件夹</string>
    <string name="settings_auto_archive">启用自动归档</string>
    <string name="settings_auto_archive_time">自定义自动归档时间 (天)</string>
    <string name="settings_tasks_badge_title">任务角标</string>
    <string name="settings_support_tasks_badge">在主界面选项卡上显示临近任务角标</string>
    <string name="settings_tasks_badge">启用选项卡任务角标</string>
    <string name="settings_tasks_badge_number">数字角标</string>
    <string name="settings_tasks_badge_dot">圆点角标</string>
    <string name="settings_hide_from_recent">从最近应用列表隐藏</string>
    <string name="settings_support_hide_from_recent">开启选项后，多任务界面将不再显示应用</string>
    <string name="settings_embedded_activities">平行视窗</string>
    <string name="settings_support_embedded_activities">开启选项后，主界面将固定在左侧；其他页面分屏在右侧展示</string>
    <string name="settings_progress_widget">小组件正向进度条</string>
    <string name="settings_mdwidget_add_btn">任务小组件按钮交互</string>
    <string name="settings_ldwidget_add_btn">任务大组件按钮交互</string>
    <string name="settings_support_progress_widget">任务小组件进度条显示项目进行进度</string>
    <string name="settings_support_mdwidget_add_btn">开启后，任务小组件上将会显示一个浮动的\"+\"按钮，用于从小组件快速添加任务</string>
    <string name="settings_support_ldwidget_add_btn">开启后，任务大组件上将会显示一个浮动的\"+\"按钮，用于从小组件快速添加任务</string>
    <string name="settings_nearby_notification">Deadline临近通知</string>
    <string name="settings_everyday_notification">每日摘要通知</string>
    <string name="settings_experimental_e2e">系统栏边到边沉浸（实验性）</string>
    <string name="settings_excitement">主菜单鼓励语句</string>
    <string name="settings_highlight">版本信息</string>
    <string name="settings_version">版本号</string>
    <string name="settings_compile_date">编译时间</string>
    <string name="settings_legal">隐私与许可</string>
    <string name="settings_license">开源许可证</string>
    <string name="settings_license_summary">MIT LICENCE 开源许可</string>
    <string name="settings_privacy_policy">隐私协议</string>
    <string name="settings_privacy_summary">了解您使用 Deadliner 的隐私权</string>
    <string name="settings_more">更多</string>
    <string name="settings_homepage">作者主页</string>
    <string name="settings_github">源代码</string>
    <string name="settings_playground">应用乐园详情页</string>
    <string name="settings_check_for_updates">检查更新</string>
    <string name="settings_support_check_for_updates">查看版本更新内容</string>
    <string name="settings_donate">捐赠</string>
    <string name="settings_donate_author">捐赠作者</string>
    <string name="settings_support_donate">🧋一杯奶茶也好，你的支持是对我最大的鼓励</string>
    <string name="settings_support_daily_notification">开启后，Deadliner将在每天固定时间推送概览统计消息</string>
    <string name="settings_support_nearby_notification">开启后，将在任务到期前12小时提醒</string>
    <string name="settings_enable_webDAV">启用WebDAV</string>
    <string name="settings_webDAV_description">WebDAV 服务为用户提供接入云端托管平台的服务。\n由于我们本身并不提供云服务，需要用户注册任意支持 WebDAV 服务的云盘账户。账号与密码将在本地存储，不会上传到云端。</string>
    <string name="settings_web_section">服务器设置</string>
    <string name="settings_web_host">服务器URL</string>
    <string name="settings_web_host_fault">服务器URL需要以https://或http://开头！</string>
    <string name="settings_web_host_success">设置WebDAV服务器成功！</string>
    <string name="settings_web_host_incomplete">请填写所有字段！</string>
    <string name="settings_web_user">用户名</string>
    <string name="settings_web_pass">密码</string>
    <string name="settings_enable_ai">启用Deadliner AI</string>
    <string name="settings_ai_description">Deadliner 接入AI服务商为用户提供从长段文本中提取任务信息的能力，从而帮助用户快速添加任务。</string>
    <string name="settings_ai_api_key">API Key</string>
    <string name="settings_ai_success">设置API Key成功！</string>
    <string name="settings_ai_incomplete">请填写API Key！</string>
    <string name="settings_ai_custom_prompt">自定义提示词</string>
    <string name="settings_ai_custom_prompt_title">提示词</string>
    <string name="settings_support_ai_custom_prompt">自定义用户提示词 (不建议初级用户修改)</string>
    <string name="settings_ai_custom_prompt_success">提示词已保存</string>
    <string name="settings_issues">提交错误报告</string>
    <string-array name="excitement_array">
        <item>Deadline 在追杀你！快跑💨</item>
        <item>任务完成度：1% → 99%🤯</item>
        <item>再拖？DDL要咬人了！🦖</item>
        <item>你离「完成」只差一个「提交」🚀</item>
        <item>提醒：别躺了，起来肝！🛏️→💻</item>
        <item>「先玩5分钟」→ 5小时😱</item>
        <item>你的待办列表：📜🔥（烧起来了）</item>
        <item>今日任务：活着 + 搞定它💪</item>
        <item>DDL越近，手速越快⚡</item>
        <item>「我明天做」→ 经典flag🚩</item>
        <item>任务完成 ✔️ 奖励：睡大觉！😴</item>
        <item>检测到：你在焦虑🌀</item>
        <item>别刷手机了！📱→❌</item>
        <item>「最后亿分钟」⌛</item>
        <item>任务堆积如山？愚公移山！⛰️</item>
        <item>DDL是你的敌人？不，是动力！💥</item>
        <item>「我好了」→「我装的」😏</item>
        <item>今日成就：没放弃！🏆</item>
        <item>建议：先做最难的！🎯</item>
        <item>完成它！然后大喊：Next！🎤</item>
    </string-array>
    <string name="add_widget">添加小组件</string>
    <string name="app_md_widget_description">任务小组件</string>
    <string name="app_ld_widget_description">任务大组件</string>
    <string name="app_mh_widget_description">习惯mini组件</string>
    <string name="app_sh_widget_description">习惯小组件</string>
    <string name="unfinished_settings">实验功能，尚未测试完成</string>
    <string name="go_next">继续</string>
    <string name="welcome">让我们\n与AI同行</string>
    <string name="welcome_version">全新Deadliner v4，诚邀您体验</string>
    <string name="finish_notice">没有剩余的工作了</string>
    <string name="add_ddl_tile_label">添加新任务</string>
    <string name="unselected">请指定时间</string>
    <string name="end_time">结束时间</string>
    <string name="start_time">开始时间</string>
    <string name="add_ddl_note">备注</string>
    <string name="clear_all">全部清除</string>
    <string name="debug_textView" translatable="false">1111111111111111111111111111111111111111111111111</string>
    <string name="title_activity_deadline_detail_fragment" translatable="false">DeadlineDetailFragment</string>
    <string name="title_activity_deadline_detail" translatable="false">DeadlineDetailActivity</string>
    <string name="search_hint">搜索Deadline</string>
    <string name="back">返回</string>
    <string name="add_edit_deadline">添加/编辑Deadline</string>
    <string name="filter_dialog_title">排序方式</string>
    <string name="filter_dialog_default">剩余时间(默认)</string>
    <string name="filter_dialog_name">名称</string>
    <string name="filter_dialog_start_time">开始时间</string>
    <string name="filter_dialog_end_time">结束时间</string>
    <string name="filter_dialog_elapse_time">项目进度</string>
    <string name="title_activity_overview">概览</string>
    <string name="snackbar_already_checkin">今天已经打卡过了哦～明天再来吧！☺️</string>
    <string name="snackbar_done">任务已经完成啦～🎉️</string>
    <string name="add_ddl_frequency_type">请设置习惯时间限制</string>
    <string name="add_ddl_frequency">打卡频率</string>
    <string name="add_ddl_total">持续天数</string>
    <string name="clear_all_notification">清空所有通知注册的闹钟</string>
    <string name="settings_import">导入</string>
    <string name="settings_export">导出</string>
    <string name="settings_cloud_sync">云服务器设置</string>
    <string name="settings_show_intro">展示欢迎页</string>
    <string name="task">任务</string>
    <string name="habit">习惯</string>
    <string name="frequency_daily">每天</string>
    <string name="frequency_weekly">每周</string>
    <string name="frequency_monthly">每月</string>
    <string name="add_task">添加任务</string>
    <string name="frequency_none">不限</string>
    <string name="setup_notification">开启通知权限</string>
    <string name="setup_notification_desc">我们需要推送DDL提醒和每日计划提示。</string>
    <string name="skip">跳过</string>
    <string name="authorize">去授权</string>
    <string name="setup_calendar">授予日历权限</string>
    <string name="setup_calendar_desc">以便我们可以同步DDL至系统日历。</string>
    <string name="setup_battery">自启动 &amp; 电池白名单</string>
    <string name="setup_battery_desc">确保后台闹钟与通知功能不被系统杀死。</string>
    <string name="check_manual">查看指南</string>
    <string name="setup_finish">初始化完成</string>
    <string name="setup_finish_desc">感谢你完成引导，现在可以愉快使用Deadliner啦。</string>
    <string name="start_to_use">开始使用</string>
    <string name="shortcut_add_task_short">添加任务</string>
    <string name="shortcut_add_task_long">快速添加任务</string>
    <string name="shortcut_overview_short">概览统计</string>
    <string name="shortcut_overview_long">查看概览统计</string>
    <string name="shortcut_disabled_message">此快捷方式当前不可用</string>
</resources>