<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <!-- 输入DDL名称 -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/circle_background_main"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/add_task"
        android:gravity="center"
        android:textSize="22sp"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/backButton"
        app:layout_constraintEnd_toStartOf="@id/importFromCalendarButton" />

    <ImageButton
        android:id="@+id/importFromCalendarButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/circle_background_main"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:srcCompat="@drawable/ic_event" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/typeTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/Widget.Material3.TabLayout.Secondary">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit"/>

    </com.google.android.material.tabs.TabLayout>

    <!-- 选择开始时间 -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ddlNameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/add_ddl_name"
        android:inputType="text"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeTabLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ddlNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 开始时间选择 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/startTimeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="1dp"
        app:strokeColor="?attr/colorOutline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ddlNameInputLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/startTimeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/startTimeContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unselected"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startTimeTitle"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- 结束时间选择 -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/endTimeCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:strokeWidth="1dp"
        app:strokeColor="?attr/colorOutline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimeCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/endTimeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/endTimeContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/unselected"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endTimeTitle"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- 任务/备注 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ddlNoteLayout"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endTimeCard">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ddlNoteEditText"
            android:hint="@string/add_ddl_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 习惯：频率类型-频率-目标次数 -->
    <TextView
        android:id="@+id/freqTypeHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/add_ddl_frequency_type"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/endTimeCard"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/freqTypeToggleGroup"
        style="@style/Widget.Material3.MaterialButtonGroup.Connected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:singleSelection="true"
        app:checkedButton="@id/btnDaily"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/freqTypeHint">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frequency_none"
            style="@style/Widget.Custom.ToggleButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDaily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frequency_daily"
            style="@style/Widget.Custom.ToggleButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnWeekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frequency_weekly"
            style="@style/Widget.Custom.ToggleButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYearly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/frequency_monthly"
            style="@style/Widget.Custom.ToggleButton" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/freqEditLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/freqTypeToggleGroup"
        android:orientation="horizontal">

        <!-- 第一个数字输入框 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/freqTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:hint="@string/add_ddl_frequency">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/freqEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- 第二个数字输入框 -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            android:hint="@string/add_ddl_total">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/habitNoteHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/freqEditLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveToCalendarButton"
            style="@style/Widget.Material3Expressive.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/save_and_add_to_calendar"
            android:textSize="16sp" />

        <!-- 保存按钮 -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/save"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>